# overtime-calculator

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/overtime_calculator/: main.py
tests/: test_calculator.py
