[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "overtime-calculator"
version = "0.1.0"
description = "A simple overtime calculator for Python"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pandas >= 1.0.0"]

[project.scripts]
overtime-calculator = "overtime_calculator.main:main"
